# NLP_UN

./: .gitignore
Lab_work_1/: EDA.ipynb  analysis_report.py  monitoring_results.csv  parsing.py  requirements.txt
Lab_work_2/: analysis.py  eda.ipynb  monitoring_results_v2.csv  parsing.py  requirements.txt
Lab_work_3/: Tfid_vectorization.py  Transformer_vectorization.py  requirements.txt
Lab_work_4/: main.py  requirements.txt
Lab_work_5/: analysis.py  monitoring_results_v3.csv  parsing.py  pyproject.toml
Lab_work_6/: main.py  parsed_news.csv  parser.py  pyproject.toml
